# langtrain-ai

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  tsconfig.json
.changeset/: config.json
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  publish.yml  release.yml
docs/: PUBLISHING.md  tutorials.md
examples/: README.md
examples/mock-finetune/: README.md  config.yaml  train.json
examples/programmatic-api/: example.ts
examples/text-mock-train/: config.json
examples/vision-manifest-example/: manifest.json
examples/vision-to-text/: README.md
examples/vision-to-text/images/: .gitkeep
npm/: README.md  index.js  package.json
npm/src/: adapters.ts  cli.ts  config.ts  index.ts  metrics.ts  tokenizer.ts  train.ts  types.ts
npm/src/test/: basic.test.ts
pypi/.history/langtune/: LICENSE_20250703171514  README_20250703175701.md  README_20250703175756.md  README_20250703175913.md  README_20250703180020.md  README_20250703181522.md  pyproject_20250703171409.toml  pyproject_20250703171443.toml  pyproject_20250703172023.toml  pyproject_20250703172046.toml  pyproject_20250703172336.toml
pypi/langtrain_ai/: README.md  pyproject.toml
pypi/langtrain_ai/langtrain_ai/: __init__.py
pypi/langtune/: README.md  pyproject.toml
pypi/langtune/langtune/: __init__.py
pypi/langtune/langtune/langtune.egg-info/: PKG-INFO  SOURCES.txt
pypi/langvision/: README.md  pyproject.toml
pypi/langvision/langvision/: __init__.py
scripts/: cleanup.sh  publish-npm.sh  publish-pypi.sh  release-prep.sh  sync-versions.ts  update_repo_urls.sh
(+9 files in other folders)
