[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langvision"
version = "0.1.0"
description = "Langvision — dataset transforms for vision"
readme = "README.md"
authors = [{name = "Pritesh"}]
dependencies = []
[tool.setuptools.packages.find]
where = ["langvision"]